@@ -7,7 +7,7 @@ setup(name='vasputil',
       description='VASP utilities',
       author='Janne Blomqvist',
       author_email='Janne.Blomqvist@tkk.fi',
-      url='http://www.fyslab.hut.fi/~/job/',
+      url='http://www.fyslab.hut.fi/~job/',
       packages=['vasputil'],
       package_dir = {'': 'lib/python'},
       scripts = ['bin/vasputil_dosplot', 'bin/vasputil_interpolate', 'bin/vasputil_zlayers']
